# Text_to_query

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: decisions.md
evals/: golden_set.json
scripts/: generate_safe_views.py  introspect_schema.py  run_nightly.py  verify_golden_set.py  verify_security.py
src/fsq_agent/: config.py
src/fsq_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/fsq_agent/core/: agent.py  llm.py
src/fsq_agent/reporter/: narrator.py  pipeline.py  publisher.py
src/fsq_agent/schema/: semantic_layer.py
src/fsq_agent/schema/definitions/: alerts.yaml  market_data.yaml  users.yaml  watchlists.yaml
src/fsq_agent/sql/: executor.py  generator.py  guards.py
src/fsq_agent/ui/: app.py
src/fsq_agent/validation/: evaluator.py
tests/: test_evaluator.py  test_guards.py  test_semantic_layer.py
